--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "52cb8b0d",
+   "id": "e5b16e64",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66bc1af7",
+   "id": "d64cb73c",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2e55066c",
+   "id": "6fc97f8b",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c951df45",
+   "id": "4f63de17",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "937cebc6",
+   "id": "63491b47",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1077e4d8",
+   "id": "bf4da9c5",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ba4279fb",
+   "id": "86122852",
    "metadata": {},
    "outputs": [
     {
@@ -146,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "56f19b0e",
+   "execution_count": 21,
+   "id": "516fc26c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the first word: chicken\n",
-      "Enter the second word: chicken\n",
+      "Enter the first word: \n",
+      "Enter the second word: \n",
       "Please enter different words\n"
      ]
     }
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4db1d3c",
+   "id": "1e13ba93",
    "metadata": {},
    "outputs": [],
    "source": []
