--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b82fea0f",
+   "id": "f8b8ff6d",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2677af6c",
+   "id": "a6519ed6",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b8873cf6",
+   "id": "1f998328",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d8957057",
+   "id": "4fa59993",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "874eca70",
+   "id": "c674c8a1",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5934ea75",
+   "id": "0ea8b60e",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ec717cbf",
+   "id": "520b04b3",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "42966f4b",
+   "id": "b72b6113",
    "metadata": {},
    "outputs": [
     {
@@ -178,16 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "4a76324a",
+   "execution_count": null,
+   "id": "07b3d0e2",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3743149425.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[37], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    elseif first==second:\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: horse\n"
      ]
     }
    ],
@@ -197,16 +196,17 @@
     "\n",
     "if first < second:    # if first comes before second in the dictionary...\n",
     "    print(f'{first} comes before {second}')\n",
-    "elseif first ==second:\n",
+    "elif first ==second:\n",
     "    printf(f\"{first} is equal {second}\")\n",
-    "else\n",
+    "else:\n",
+    "\n",
     "    print(f'{second} comes before {first}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1493f14d",
+   "id": "d9ca2794",
    "metadata": {},
    "outputs": [],
    "source": []
