--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "ab08598c",
    "metadata": {},
    "outputs": [
@@ -289,9 +289,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your name1: son\n",
-      "Enter your name2: father\n",
-      "father comes before son\n"
+      "Enter your name1: choco\n",
+      "Enter your name2: apple\n",
+      "apple comes before choco\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
     "if name1 < name2:\n",
     "    print(f'{name1} comes before {name2}')\n",
     "elif name1 == name2:\n",
-    "    print(f'{name1} is same as {name2}')\n",
+    "    print(f'{name1} is same as {name2}!')\n",
     "else:\n",
     "    print(f'{name2} comes before {name1}')"
    ]
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfee6761",
+   "id": "b87c76c0",
    "metadata": {},
    "outputs": [],
    "source": []
