--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b69d4c8a",
+   "id": "c73bae03",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5b835d7c",
+   "id": "e943d3a7",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fec3438",
+   "id": "44fe70cc",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "889670f1",
+   "id": "cf102a8a",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f33124c",
+   "id": "e099e854",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1aa0ab4",
+   "id": "ac43010e",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c0856c1",
+   "id": "d11ad519",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb2eb6db",
+   "id": "284eba7d",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4898484d",
+   "id": "3ca0df68",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d3a4b1bd",
+   "id": "91b69013",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dc7112e3",
+   "id": "b71c5142",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "852c6253",
+   "id": "59957468",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a1a3aeeb",
+   "id": "5f0bb6a0",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fc8546a3",
+   "id": "09cd2c04",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38bcabda",
+   "id": "1e99742f",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8d07e864",
+   "id": "a179620a",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6da54084",
+   "id": "10211b31",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2d4ff56e",
+   "id": "08973b84",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b57aae20",
+   "id": "0cbad746",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f255ef9e",
+   "id": "f8bd058c",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2a6b91f9",
+   "id": "85386f5d",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e46ba4d0",
+   "id": "3c1fc8c9",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c3998bb4",
+   "id": "6ff892bb",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "db08809e",
+   "id": "92a87f51",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f2659bb",
+   "id": "4e3f5878",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c66376c3",
+   "id": "19a475b7",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da3eaec0",
+   "id": "5f388e89",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c79c18f3",
+   "id": "dc61f83f",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "016b7eb0",
+   "id": "258a7383",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5ca1a31a",
+   "id": "cd925700",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "cc67d3db",
+   "id": "89d29007",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3dceae95",
+   "id": "fc1f41fc",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a258914d",
+   "id": "bd9f94d9",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a8072a",
+   "id": "989d4576",
    "metadata": {},
    "source": [
     "# Exercise: Multi-part greeting\n",
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2ed6f268",
+   "id": "9b18956f",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de7c9f77",
+   "id": "f8e76366",
    "metadata": {},
    "source": [
     "# f-strings\n",
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a2070bd5",
+   "id": "5bceb407",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "42914e9d",
+   "id": "0e74d76d",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e131b940",
+   "id": "87cbbae2",
    "metadata": {},
    "source": [
     "# Comparing values\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "951a2226",
+   "id": "4c462c65",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "dfaeda81",
+   "id": "164d54a0",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "ad8d1dbb",
+   "id": "c21fb327",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "afacfb0c",
+   "id": "d18308ab",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "172bea77",
+   "id": "d141bb2d",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "572be3ed",
+   "id": "59a3c2ba",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e662df32",
+   "id": "106762c6",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "cbbcb475",
+   "id": "1bfac85f",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b48e61c",
+   "id": "f363260f",
    "metadata": {},
    "source": [
     "# Comparison operators\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "167dbe5e",
+   "id": "3943ba83",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "414c6a29",
+   "id": "3bda9175",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "bfa8c38f",
+   "id": "bec454fe",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7a00a79e",
+   "id": "59766ff2",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "af7b1bf3",
+   "id": "c67eeae5",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb51145",
+   "id": "d266416a",
    "metadata": {},
    "source": [
     "# Conditional execution\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "435f3ff9",
+   "id": "22cdea53",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a6cced",
+   "id": "d1b99208",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9a22dd0",
+   "id": "7f166178",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first?\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "6dfcea24",
+   "id": "06d30072",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98deb5ba",
+   "id": "f4cd6037",
    "metadata": {},
    "source": [
     "# More sophisticated comparisons\n",
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4e0c483a",
+   "id": "1285289b",
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c5cde1d",
+   "id": "8fdfeacd",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first? \n",
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aaa06d2",
+   "id": "f736f96b",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c103e4b0",
+   "id": "e790b170",
    "metadata": {},
    "outputs": [
     {
@@ -1308,8 +1308,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "id": "ea28642a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: taxi\n",
+      "Enter second word: \n",
+      "You entered an empty string for second; try again\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if someone just presses enter when given \"input\", we get the empty string, aka ''\n",
+    "\n",
+    "first = input('Enter first word: ')\n",
+    "second = input('Enter second word: ')\n",
+    "\n",
+    "if first == '':\n",
+    "    print('You entered an empty string for first; try again')\n",
+    "elif second == '':\n",
+    "    print('You entered an empty string for second; try again')\n",
+    "elif first < second:  \n",
+    "    print(f'{first} comes before {second}')\n",
+    "elif first == second:\n",
+    "    print(f'{first} and {second} are the same!')\n",
+    "else:  # implicitly, this is >\n",
+    "    print(f'{second} comes before {first}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2d2b5f72",
+   "id": "2884af42",
    "metadata": {},
    "outputs": [],
    "source": []
