--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e5b16e64",
+   "id": "40456305",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d64cb73c",
+   "id": "7a250459",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6fc97f8b",
+   "id": "44371f52",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4f63de17",
+   "id": "f6ed4181",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "63491b47",
+   "id": "96d0b94b",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "bf4da9c5",
+   "id": "9be836ee",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "86122852",
+   "id": "a0c28143",
    "metadata": {},
    "outputs": [
     {
@@ -146,8 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "516fc26c",
+   "execution_count": 22,
+   "id": "66c4dd1c",
    "metadata": {},
    "outputs": [
     {
@@ -155,15 +155,18 @@
      "output_type": "stream",
      "text": [
       "Enter the first word: \n",
-      "Enter the second word: \n",
-      "Please enter different words\n"
+      "Enter the second word: word\n",
+      " comes before word.\n"
      ]
     }
    ],
    "source": [
     "word1 = input(\"Enter the first word: \")\n",
     "word2 = input(\"Enter the second word: \")\n",
-    "\n",
+    "if word1 ==\"\":\n",
+    "    print(\"you have enetered no text, please try again\")\n",
+    "ielif word1 ==\"\":\n",
+    "    print(\"you have enetered no text, please try again\")\n",
     "if word1==word2:\n",
     "    print(\"Please enter different words\")\n",
     "elif word1 < word2:\n",
@@ -175,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e13ba93",
+   "id": "3cc3d192",
    "metadata": {},
    "outputs": [],
    "source": []
