--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f8b8ff6d",
+   "id": "4ebd5471",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a6519ed6",
+   "id": "05cd0483",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1f998328",
+   "id": "afa6e3c9",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4fa59993",
+   "id": "f8ca8dd9",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c674c8a1",
+   "id": "33879b6c",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0ea8b60e",
+   "id": "464a3e18",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "520b04b3",
+   "id": "b649bb50",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b72b6113",
+   "id": "91fbf607",
    "metadata": {},
    "outputs": [
     {
@@ -178,15 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07b3d0e2",
+   "execution_count": 44,
+   "id": "37d2d89b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter first word: horse\n"
+      "Enter first word: horse\n",
+      "Enter second word: horse\n",
+      "horse is equal horse\n"
      ]
     }
    ],
@@ -197,7 +199,7 @@
     "if first < second:    # if first comes before second in the dictionary...\n",
     "    print(f'{first} comes before {second}')\n",
     "elif first ==second:\n",
-    "    printf(f\"{first} is equal {second}\")\n",
+    "    print(f\"{first} is equal {second}\")\n",
     "else:\n",
     "\n",
     "    print(f'{second} comes before {first}')"
@@ -206,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9ca2794",
+   "id": "cec8bd0c",
    "metadata": {},
    "outputs": [],
    "source": []
