--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dea1f73d",
+   "id": "ded2d589",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "93323b04",
+   "id": "bdf36986",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6780b0",
+   "id": "e085eb16",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53904192",
+   "id": "91af1004",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "986c3594",
+   "id": "a7beae3f",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8bbd8a76",
+   "id": "5c94aadf",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b86a7404",
+   "id": "dd5b4779",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "98a46b95",
+   "id": "4caaaaf4",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cc45e094",
+   "id": "0a8929fd",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "efc72da4",
+   "id": "94b843ca",
    "metadata": {
     "scrolled": false
    },
@@ -178,8 +178,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "b2090fa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter first word: d\n",
+      "Enter second word: \n",
+      "You entered an empty string for second; try again\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if someone just presses enter when given \"input\", we get the empty string, aka ''\n",
+    "\n",
+    "first = input('Enter first word: ')\n",
+    "second = input('Enter second word: ')\n",
+    "\n",
+    "if first == '':\n",
+    "    print('You entered an empty string for first; try again')\n",
+    "elif second == '':\n",
+    "    print('You entered an empty string for second; try again')\n",
+    "elif first < second:  \n",
+    "    print(f'{first} comes before {second}')\n",
+    "elif first == second:\n",
+    "    print(f'{first} and {second} are the same!')\n",
+    "else:  # implicitly, this is >\n",
+    "    print(f'{second} comes before {first}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "76561198",
+   "id": "e044cc43",
    "metadata": {},
    "outputs": [],
    "source": []
