--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "40456305",
+   "id": "8ade2275",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7a250459",
+   "id": "e40a9102",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "44371f52",
+   "id": "6ca0dbf1",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f6ed4181",
+   "id": "91fb852c",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "96d0b94b",
+   "id": "60c9745f",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9be836ee",
+   "id": "017dc4ab",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a0c28143",
+   "id": "eec9bdd8",
    "metadata": {},
    "outputs": [
     {
@@ -146,17 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "66c4dd1c",
+   "execution_count": 25,
+   "id": "7de2796e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the first word: \n",
-      "Enter the second word: word\n",
-      " comes before word.\n"
+      "Enter the first word: egg\n",
+      "Enter the second word: chicken\n",
+      "chicken comes before egg.\n"
      ]
     }
    ],
@@ -164,10 +164,10 @@
     "word1 = input(\"Enter the first word: \")\n",
     "word2 = input(\"Enter the second word: \")\n",
     "if word1 ==\"\":\n",
-    "    print(\"you have enetered no text, please try again\")\n",
-    "ielif word1 ==\"\":\n",
-    "    print(\"you have enetered no text, please try again\")\n",
-    "if word1==word2:\n",
+    "    print(\"you have enetered no text for word 1, please try again\")\n",
+    "elif word2 ==\"\":\n",
+    "    print(\"you have enetered no text for word 2, please try again\")\n",
+    "elif word1==word2:\n",
     "    print(\"Please enter different words\")\n",
     "elif word1 < word2:\n",
     "    print(f\"{word1} comes before {word2}.\")\n",
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cc3d192",
+   "id": "231a918b",
    "metadata": {},
    "outputs": [],
    "source": []
