--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4ebd5471",
+   "id": "e1cce570",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "05cd0483",
+   "id": "fbd50075",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "afa6e3c9",
+   "id": "17e1b3cf",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f8ca8dd9",
+   "id": "3e1d5ae0",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "33879b6c",
+   "id": "7b35d028",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "464a3e18",
+   "id": "05c4afa3",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b649bb50",
+   "id": "1e429db1",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "91fbf607",
+   "id": "cbdd55b7",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "37d2d89b",
+   "id": "5ae9af04",
    "metadata": {},
    "outputs": [
     {
@@ -208,10 +208,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cec8bd0c",
+   "id": "6c5ec951",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x= 10\n",
+    "y=20\n",
+    "\n",
+    "if x==10 and y==20\n",
+    "    print(\" Yes both are e\")"
+   ]
   }
  ],
  "metadata": {
